network/vpc2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  This project is to create a vpc.
  This vpc should have a public and private subnet.
  An EC2 instance should be launched in both subnets. 

Resources:
  EffulgencetechVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: stack
          Value: production

  EffulgencetechVPC_IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: stack
        Value: production
  
  EffulgencetechVPC_IGW_Attachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: 
        Ref: EffulgencetechVPC
      InternetGatewayId:
        Ref: EffulgencetechVPC_IGW

  EffulgencetechVPCpubSN: 
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref EffulgencetechVPC
      CidrBlock: 10.0.0.1/24
      Tags:
        - Key: project
          Value: effulgencepublicsubnet

  EffulgencetechVPCprivSN: 
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref EffulgencetechVPC
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: project
          Value: effulgencepublicsubnet

  EffulgencetechVPCpubSNRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref EffulgenceVPC
      Tags:
        - Key: project
          Value: effulgencePubroutetable
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayToInternet
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref EffulgencetechVPC_IGW
      RouteTableId: !Ref EffulgencetechVPCpubSNRT


    EffulgencetechVPCprivSNRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref EffulgenceVPC
      Tags:
        - Key: project
          Value: effulgencePrivroutetable
  
  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayToInternet
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref EffulgencetechVPC_IGW
      RouteTableId: !Ref EffulgencetechVPCprivSNRT

Outputs:
